# backtest_engine

./: .gitignore  README.md  all_code.md  all_code.py  pyproject.toml  requirements.txt
app/: presets.json  streamlit_app.py
app/config/: app_settings.yaml  universe_presets.yaml
notebooks/: 01_smoke_test.ipynb  02_frontend.ipynb  all_code.py
notebooks/batch_outputs/: batch_summary.csv
notebooks/batch_outputs/frontend_examples/: batch_summary.csv
notebooks/batch_outputs/frontend_examples/mf-10y-annual-top30-net1%/: mf-10y-annual-top30-net1%.periods.csv  mf-10y-annual-top30-net1%.summary.csv
notebooks/batch_outputs/frontend_examples/mf-10y-semiannual-top15-net1%/: mf-10y-semiannual-top15-net1%.periods.csv  mf-10y-semiannual-top15-net1%.summary.csv
notebooks/batch_outputs/mf-10y-annual-top15/: mf-10y-annual-top15.periods.csv  mf-10y-annual-top15.summary.csv
notebooks/batch_outputs/mf-10y-annual-top30/: mf-10y-annual-top30.periods.csv  mf-10y-annual-top30.summary.csv
notebooks/outputs/single_runs/: mf-10y-annual-top15-net1%.periods.csv  mf-10y-annual-top15-net1%.summary.csv
src/backtest_engine/: __init__.py  app_settings.py  batch.py  config.py  data_provider.py  db.py  engine.py  formula.py  postgres_provider.py  presets.py  selection.py
src/backtest_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backtest_engine/data/market/: nifty500_raw.csv  nifty500_tri.csv
src/backtest_engine/utils/: dates.py
