[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-engine"
version = "0.0.1"
description = "Config-first backtest engine for Indian MF/PMS strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "SQLAlchemy>=2.0",
    "psycopg2-binary",
    "PyYAML>=6.0",
    "python-dateutil",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
